full screen, live demo. TODO: fix pheromones.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Ant Simulation</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Ant Simulation" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#212121" />
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
-    <p>Ant Simulation</p>
-
     <script
       language="javascript"
       type="text/javascript"
